# SFConsoleChat

./: CMakeLists.txt  README.md
include/: Chat.h  Exception.h  Message.h  User.h
src/: Chat.cpp  Message.cpp  User.cpp  main.cpp
